Edited CSS, icons and renamed project
Edited CSS, icons and renamed project

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -57,7 +57,7 @@
                     <a href="https://www.minecraft.net/fr-fr/get-minecraft">Besoin d'un compte?</a>
                 </span>
                 <p class="loginDisclaimerText">Votre mot de passe est envoyé directement à Mojang, et n'est jamais stocké.</p>
-                <p class="loginDisclaimerText">Project-U Launcher n'est pas affilié à Mojang AB.</p>
+                <p class="loginDisclaimerText">Vytalic Launcher n'est pas affilié à Mojang AB.</p>
             </div>
         </form>
     </div>
