--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,15 +5,18 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">Bienvenue à Project-U</span>
+        <span id="welcomeHeader">Bienvenue sur le Launcher Vytalic<br/><p style="font-size: 16px; font-style: italic;">Serveur: Project-U (Par défaut)</p><br/></span>
         <span id="welcomeDescription">
-            Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  
-            Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.
-            The world we are creating is yours to explore.
-            Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.
-            As the words of House Stark ominously warn: Winter is Coming.</span>
+           Notre mission est de recréer les univers appartenants a de nombreux jeux-vidéo au sein même de MineCraft, et de les rendre accessible à tous en Multi-Joueur.
+           Grâce aux efforts de nombreux membres de notre communauté, nous nous efforcons de recréer de manière consistente et précise ces mondes imaginaires, 
+           afin que vous puissiez pleinement les explorer.
+           <br /> <br />
+           Par défaut, vous vous trouvez sur le menu du serveur <b>Project-U</b>, vous pouvez facilement changer de serveur de jeu en bas à droite du Launcher. 
+           Nous proposons de multiples façons de personaliser votre expérience de jeu, avec des mods optionels en supplément de ceux nécessaires sur les serveurs, mais
+           aussi des cosmestiques en jeu, et bien plus !
+        </span>
         <br>
-        <span id="welcomeDescCTA">Vous êtes seulement à quelques clics de rejoindre Project-U.</span>
+        <span id="welcomeDescCTA">Vous êtes seulement à quelques clics de rejoindre les serveurs Vytalic.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUER
