Updated To Public

--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,18 +5,17 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">Bienvenue sur le Launcher Vytalic<br/><p style="font-size: 16px; font-style: italic;">Serveur: Project-U (Par défaut)</p><br/></span>
+        <span id="welcomeHeader">Bienvenue sur le Launcher Vytalic<br/><p style="font-size: 16px; font-style: bold;">ModPack: Pixelmon (Par défaut)</p><br/></span>
         <span id="welcomeDescription">
-           Notre mission est de recréer les univers appartenants a de nombreux jeux-vidéo au sein même de MineCraft, et de les rendre accessible à tous en Multi-Joueur.
-           Grâce aux efforts de nombreux membres de notre communauté, nous nous efforcons de recréer de manière consistente et précise ces mondes imaginaires, 
-           afin que vous puissiez pleinement les explorer.
+           Notre mission est de proposer un Launcher simple et agréable contenant des Mod Packs personalisés pour différents Groupes ou Streameurs.
+           Il permet également de rejoindre rapidement les events organisé par la team Vytalic.
+           <br /> 
+           Vous trouverez sur le menu, un modpack pré-selectioné: <b>Pixelmon</b> par défaut. Vous pouvez facilement changer de mode de jeu en bas à droite du Launcher.
            <br /> <br />
-           Par défaut, vous vous trouvez sur le menu du serveur <b>Project-U</b>, vous pouvez facilement changer de serveur de jeu en bas à droite du Launcher. 
-           Nous proposons de multiples façons de personaliser votre expérience de jeu, avec des mods optionels en supplément de ceux nécessaires sur les serveurs, mais
-           aussi des cosmestiques en jeu, et bien plus !
+           Pour plus de sécurité, le launcher est open-source. ♥
         </span>
         <br>
-        <span id="welcomeDescCTA">Vous êtes seulement à quelques clics de rejoindre les serveurs Vytalic.</span>
+        <span id="welcomeDescCTA">Vous êtes seulement à quelques clics d'adopter le Launcher Vytalic.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUER
