Microsoft & New UI (Thx to ModRealms Version)
> Title

--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -6,10 +6,10 @@
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
         <span id="welcomeHeader"><%=WELCOME_HEADER_TEXT%></span>
-        <span id="welcomeDescription">We hope you enjoy your stay! You can contact us on our <a href="<%=DISCORD_URL%>">Discord</a> server at any time if ever you need anything! If you have any issues with any of our servers, please don't hesitate to let us know!</span>
+        <span id="welcomeDescription">Nous espérons que vous aimerez le launcher! Contactez nous sur <a href="<%=DISCORD_URL%>">Discord</a> à tout moment si vous avez besoin d'aide, ou avez une suggestion!</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
-                CONTINUE
+                CONTINUER
                 <svg id="welcomeSVG" viewBox="0 0 24.87 13.97">
                     <defs>
                         <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
